# AbaloneAI

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
agents/: alfa_beta_agent.cpp  minmax_agent.cpp  random_agent.cpp
docs/: toolchain_setup.md  writing_agents.md
include/abalone/: agent.hpp  arena.hpp  board.hpp  game.hpp  gui.hpp  move.hpp  ui.hpp
src/: agent.cpp  arena.cpp  board.cpp  game.cpp  gui.cpp  main.cpp  move.cpp  ui.cpp
tests/: test_rules.cpp
